# Modly

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: TODO.md  schema.sql
docs/superpowers/plans/: 2026-05-29-settings-planner-preferences.md  2026-06-01-pack-artifact-version-control.md  2026-06-01-remove-pack-updates.md
docs/superpowers/specs/: 2026-06-01-pack-artifact-version-control-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: configs.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: categories.rs  files.rs  instances.rs  launcher.rs  mod.rs  mods.rs  packs.rs  scan.rs  settings.rs  updates.rs
src-tauri/src/models/: category.rs  instance.rs  launch.rs  mod.rs  mod_metadata.rs  pack_item.rs  scan.rs  settings.rs  updates.rs
src-tauri/src/services/: database.rs  hash_service.rs  launcher.rs  mod.rs  mod_parser.rs  scanner.rs  updates.rs  zip_service.rs
src/components/configs/: ConfigEditor.tsx  ConfigTree.tsx  FileTabs.tsx
src/components/instances/: ExportZipDialog.tsx  InstanceCard.tsx  (+1 more)
src/hooks/: useCategories.ts  useInstances.ts  useMods.ts  usePacks.ts  useSettings.ts  useUpdates.ts
src/lib/: api.ts  export-paths.ts  instance-paths.ts  mod-source-url.ts  types.ts  utils.ts
src/pages/: ConfigsPage.tsx  Dashboard.tsx  Dependencies.tsx  Instances.tsx  Logs.tsx  ModSuggestions.tsx  Mods.tsx  ResourcePacks.tsx  Settings.tsx  Updates.tsx
src/store/: app.ts  configsStore.ts
(+21 files in other folders)
