[package]
name = "modpack-manager"
version = "1.1.0"
description = "Minecraft instance and mod manager"
authors = ["you"]
edition = "2021"

[lib]
name = "modpack_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2.2"
walkdir = "2"
sha2 = "0.10"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
